uses openApi for bikeComponents
